<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_location"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:gravity="top"
            android:hint="@string/enter_message"
            android:textColorHint="#AEAEAE"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_dwell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:gravity="top"
            android:hint="@string/dwell_message"
            android:textColorHint="#AEAEAE"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:gravity="top"
            android:hint="@string/exit_message"
            android:textColorHint="#AEAEAE"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:gravity="top"
            android:hint="@string/set_radius"
            android:inputType="number"
            android:textColorHint="#AEAEAE"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end|center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="5dp">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:text="@string/save"
                android:textAllCaps="true"
                android:textColor="#2979FF"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>